--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: #333;
     text-align: center;
-    font-family: Courier;
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -15,26 +15,31 @@ body
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5cm;
+    padding: 0.5em;
 }
 
 #cabecera #tagline
 {
-    padding: 0 0 0 1cm;
+    padding: 0 0 0 1em;
     font-weight: normal;
-    font-size: 0.8cm;
+    font-size: 0.8em;
 }
 
 #container
 {
     width: 70%;
-    padding: 1cm;
+    padding: 0;
     text-align: left;
-    border: 1px solid #000;
+    border: 1px solid #DDD;
     margin: 0 auto;
 }
 
 #container h1
 {
     font-size: 20px;
+}
+
+#post
+{
+    padding: 1em;
 }
